# LibTaskForce

./: .gitmodules  .travis.yml  CMakeLists.txt  Communicator.cpp  Communicator.hpp  Environment.cpp  Future.hpp  ParallelAssert.hpp  README.md  main.cpp
LibTaskForce/: CMakeLists.txt  LibTaskForce.hpp  libtaskforceConfig.cmake.in
LibTaskForce/Distributed/: CMakeLists.txt  MPIWrappers.hpp  ProcessArray.hpp  ProcessComm.cpp  ProcessComm.hpp  ProcessEnv.cpp  ProcessEnv.hpp  ProcessFuture.hpp  ProcessQueue.cpp  ProcessQueue.hpp  ProcessTask.hpp  Scheduler.cpp  Scheduler.hpp
LibTaskForce/General/: GeneralComm.hpp  GeneralEnv.hpp  GeneralTask.hpp
LibTaskForce/Hybrid/: CMakeLists.txt  HybridComm.cpp  HybridComm.hpp  HybridEnv.cpp  HybridEnv.hpp  HybridFuture.hpp  HybridQueue.hpp  HybridTask.hpp
LibTaskForce/Tests/: CMakeLists.txt  DistTest.cpp  HybridTest.cpp  MMTask.hpp  ThreadTest.cpp  main.cpp
LibTaskForce/Threading/: CMakeLists.txt  ThreadComm.cpp  ThreadComm.hpp  ThreadEnv.cpp  ThreadEnv.hpp  ThreadFuture.hpp  ThreadQueue.hpp  ThreadTask.hpp
LibTaskForce/Util/: ParallelAssert.hpp  Serialization.hpp  pragma.h
cmake/Modules/: FindTBB.cmake  Findcereal.cmake
libtaskforce/: CMakeLists.txt  libtaskforceConfig.cmake.in
libtaskforce/include/: AddTask.hpp  CMakeLists.txt  CommStats.hpp  Communicator.hpp  DVector.hpp  Environment.hpp  Future.hpp  LibParallel.hpp  MPIWrappers.hpp  OldSynch.hpp  Reduce.hpp  Serialization.hpp  TaskResults.hpp
libtaskforce/src/: CMakeLists.txt  CommStats.cpp  Communicator.cpp  Environment.cpp
libtaskforce/test/: main.cpp
parallel/: CMakeLists.txt
parallel/src/: CMakeLists.txt  Communicator.cpp  Communicator.hpp  Environment.cpp  Environment.hpp  Future.hpp  LibParallel.hpp  MadnessHelper.hpp  ParallelAssert.hpp
parallel/src/Util/: Timer.cpp  Timer.hpp
parallel/test/: CMakeLists.txt  main.cpp
scripts/: ChangeLicense.py
taskforce/: CMakeLists.txt  libtaskforceConfig.cmake.in
taskforce/include/: CMakeLists.txt  CommStats.hpp  Communicator.hpp  Environment.hpp  Future.hpp  TaskResults.hpp  Timer.hpp
taskforce/src/: CMakeLists.txt  Communicator.cpp  Environment.cpp  MadnessHelper.cpp  Timer.cpp
taskforce/test/: CMakeLists.txt
