set(LibTaskForceHeaders CommStats.hpp
                    Communicator.hpp
                    DVector.hpp
                    Environment.hpp
                    Future.hpp
                    LibTaskForce.hpp
                    MadnessHelper.hpp
                    ParallelAssert.hpp
                    TaskResults.hpp
                    Timer.hpp
)
install(FILES ${LibTaskForceHeaders} DESTINATION include)
