set(CMAKE_SKIP_BUILD_RPATH FALSE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_executable(TestTaskForce main.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
target_link_libraries(TestTaskForce taskforce ${MADNESS_LIBRARIES})
add_dependencies(TestTaskForce taskforce)
install(TARGETS TestTaskForce RUNTIME DESTINATION bin)
